--- a/front-end/perfil/perfil.html
+++ b/front-end/perfil/perfil.html
@@ -87,6 +87,7 @@
                 <button type="button" class="btn btn-success " onclick="mostrar3();">Pedidos abiertos</button>
             </div>
             <div class="col-md-9 col-12">
+
                 <div id="seccion1" class="text-center">
                     <div class="">
                         <div class="h1">Pefil</div>
@@ -95,7 +96,7 @@
                             <table class="table table-borderless">
                                 <tr>
                                     <td>Nombre:</td>
-                                    <td>Josue Barrales Galvez</td>
+                                    <td>Hola Juan</td>
                                 </tr>
                                 <tr>
                                     <td>Telefono:</td>
