--- a/front-end/index.html
+++ b/front-end/index.html
@@ -51,13 +51,16 @@
                         <li class="nav-item">
                             <a class="nav-link" href="login/registro.html">Registrarse</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="perfil/perfil.html">Perfil</a>
+                        </li>
                     </ul>
                 </div>
 
                 <div class="col-md-5 ">
                     <form class="form-inline text-right ">
-                        <input class="form-control" type="text" placeholder="Buscar productos...">
-                        <button class="btn" type="button"><i class="material-icons">&#xe163;</i></button>
+                        <input class="form-control" id="entBuscar" type="text" placeholder="Buscar productos...">
+                        <button class="btn" type="button" onclick="buscar();"><i class="material-icons">&#xe163;</i></button>
                     </form>
 
                 </div>
@@ -118,7 +121,7 @@
 
         </div>
     </div>
-    <!--Pie de pagina-->
+    <!-- Pie de pagina -->
     <footer>
         <div class="container-lg">
             <div class="row">
