--- a/front-end/login/registro.html
+++ b/front-end/login/registro.html
@@ -52,6 +52,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../login/registro.html">Registrarse</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../perfil/perfil.html">Perfil</a>
+                        </li>
                     </ul>
                 </div>
 
