--- a/front-end/index.html
+++ b/front-end/index.html
@@ -69,7 +69,8 @@
                         <div class="col-11" id="nombreNav">
                         </div>
                         <div class="col-1">
-                            <i class="material-icons">&#xe8cc;</i>
+                            <a href="carrito/carrito.html">
+                            <i class="material-icons">&#xe8cc;</i></a>
                         </div>
                     </div>
                 </div>
@@ -103,7 +104,7 @@
                 <img src="http://drive.google.com/uc?export=view&id=17C__WoMCb8PP7C3hC1RARQccGGM6lekn" alt="New York">
                 <div class="carousel-caption">
                     <h3>BARRILITO</h3>
-                    <p>En la Cultura lo mejor de productos BARRILITO</p>
+                    <p>En la Cultura lo mejor de productos Barrilito</p>
                 </div>
             </div>
         </div>
