--- a/front-end/index.html
+++ b/front-end/index.html
@@ -43,7 +43,7 @@
                 <div class="col-md-3">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="productos/productos.html">Productos</a>
+                            <a class="nav-link" href="productos/productos.html">JAJA</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="login/registro.html">Iniciar Sesion</a>
