[Coco]Ortografia revisada y cambiada

--- a/front-end/administrador/index.html
+++ b/front-end/administrador/index.html
@@ -37,7 +37,7 @@
     </div>
     <div class="tablero container">
         <div class="text-left titulo h5 text-white">
-            Hola Josue ¿Que quieres hacer hoy?
+            Hola Josué ¿Qué quieres hacer hoy?
         </div>
         <br>
         <div class="row">
@@ -129,7 +129,7 @@
                 </div>
                 <form action="productoa.html?categoria=todas" method="get">
                     <div class="modal-body">
-                        <input type="text" class="form-control" id="codigo" placeholder="Ingrese el codigo del producto" name="codigo" required>
+                        <input type="text" class="form-control" id="codigo" placeholder="Ingrese el código del producto" name="codigo" required>
                     </div>
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-outline-success">Continuar</button>
@@ -147,7 +147,7 @@
                 </div>
                 <form id="form-eliminarp">
                     <div class="modal-body">
-                        <input type="text" class="form-control" id="codigo-eliminar" placeholder="Ingrese el codigo del producto" name="codigo" required>
+                        <input type="text" class="form-control" id="codigo-eliminar" placeholder="Ingrese el código del producto" name="codigo" required>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-danger" onclick="eliminar();">Eliminar el producto</button>
