--- a/front-end/administrador/informe-clientes.html
+++ b/front-end/administrador/informe-clientes.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La cultura</title>
+    <title>La Cultura</title>
 
     <!--Hojas de estilo propias-->
     <link rel="stylesheet" href="resources/css/style.css">
@@ -48,7 +48,7 @@
                         <th>Num_cliente</th>
                         <th>Nombre</th>
                         <th>Apellidos</th>
-                        <th>Telefono</th>
+                        <th>Teléfono</th>
                         <th>Correo</th>
                     </tr>
                 </thead>
