--- a/front-end/administrador/informe-productos.html
+++ b/front-end/administrador/informe-productos.html
@@ -38,10 +38,10 @@
 
     <div class="container">
         <div class="text-left titulo h5">
-            ¡Selecciona una categoria!
+            ¡Selecciona una categoría!
         </div>
         <div class="dropdown dropright">
-            <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">Categorias</button>
+            <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">Categorías</button>
             <div class="dropdown-menu">
                 <button type="button" class="dropdown-item" onclick="artes();">Artes</button>
                 <button type="button" class="dropdown-item" onclick="oficina();">Oficina</button>
@@ -55,11 +55,11 @@
             <table class="table table-dark table-hover">
                 <thead>
                     <tr>
-                        <th>Codigo</th>
+                        <th>Código</th>
                         <th>Nombre</th>
-                        <th>Descripcion</th>
+                        <th>Descripción</th>
                         <th>Precio</th>
-                        <th>Categoria</th>
+                        <th>Categoría</th>
                     </tr>
                 </thead>
                 <tbody id="contenido">
