--- a/front-end/administrador/productoa.html
+++ b/front-end/administrador/productoa.html
@@ -60,19 +60,19 @@
 
                 </div>
                 <div class="form-group">
-                    <label for="nombre">Codigo:</label>
+                    <label for="nombre">Código:</label>
                     <input type="text" class="form-control" id="codigo" placeholder="Ingrese el codigo" name="codigo" required>
                 </div>
             </div>
 
             <div class="col-12 col-md-6 col">
                 <div class="form-group">
-                    <label for="nombre">Descripcion Corta:</label>
+                    <label for="nombre">Descripción corta:</label>
                     <input type="text" class="form-control" id="descripcion_breve" placeholder="Ingrese la descripcion corta" name="precio" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="nombre">ingrese la categoria:</label>
+                    <label for="nombre">Ingrese la categoría:</label>
                     <div class="form-check-inline">
                         <label class="form-check-label" for="radio1">
                                 <input type="radio" class="form-check-input" id="categoria1" name="optradio" value="option1" checked>Artes
@@ -106,7 +106,7 @@
             </div>
             <div class="col-12 col-md-6 col">
                 <div class="form-group">
-                    <label for="comment">Descripcion completa:</label>
+                    <label for="comment">Descripción completa:</label>
                     <textarea class="form-control" rows="7" id="descripcion" placeholder="Ingresa los punto separados por coma(,)"> </textarea>
                 </div>
             </div>
