--- a/front-end/carrito/carrito.html
+++ b/front-end/carrito/carrito.html
@@ -48,7 +48,7 @@
                             <a class="nav-link" href="../productos/productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../login/registro.html">Iniciar Sesion</a>
+                            <a class="nav-link" href="../login/registro.html">Iniciar sesión</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../login/registro.html">Registrarse</a>
@@ -84,7 +84,7 @@
     <div class="container">
 
         <div class="text-left titulo h5">
-            ¡Selecciona los articulos a eliminar o comprar!
+            ¡Selecciona los artículos a eliminar o comprar!
         </div>
         <div class="table-responsive">
             <table class="table table-hover">
@@ -134,7 +134,7 @@
                     <br>
                     <p><i class="material-icons">&#xe55e;</i> Tlahuicole 5 Barrio de Alta Luz Cuapiaxtla Tlaxcala</p>
                     <p><i class="material-icons">&#xe8c5;</i> 2761163782</p>
-                    <a class="btn btn-success" href="mailto:laculturasat@gmail.com">Mandanos un Email</a>
+                    <a class="btn btn-success" href="mailto:laculturasat@gmail.com">Mándanos un Email</a>
                 </div>
                 <div class="col-sm-3">
                     <h3>Enlaces</h3>
@@ -142,7 +142,7 @@
 
                     <p><i class="material-icons">&#xe88a;</i><a href="index.html">Inicio</a></p>
                     <p><i class="material-icons">&#xe5c3;</i><a href="../productos/productos.html">Productos</a></p>
-                    <p><i class="material-icons">&#xe7fb;</i><a href="../contactanos/contactanos.html">Contactanos</a></p>
+                    <p><i class="material-icons">&#xe7fb;</i><a href="../contactanos/contactanos.html">Contáctanos</a></p>
 
                 </div>
             </div>
