--- a/front-end/contactanos/contactanos.html
+++ b/front-end/contactanos/contactanos.html
@@ -43,7 +43,7 @@
                             <a class="nav-link" href="../productos/productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../login/registro.html">Iniciar Sesion</a>
+                            <a class="nav-link" href="../login/registro.html">Iniciar sesión</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../login/registro.html">Registrarse</a>
@@ -92,7 +92,7 @@
                             <input type="text" class="form-control" id="correo" placeholder="ejemplo@dominio.com" name="correo" required>
                         </div>
                         <div class="form-group">
-                            <label for="pwd">Telefono:</label>
+                            <label for="pwd">Teléfono:</label>
                             <input type="number" class="form-control" id="Telefono" placeholder="2519451111" name="telefono" required>
                         </div>
                         <div class="form-group">
@@ -107,7 +107,7 @@
                         style="border:0;" allowfullscreen="" loading="lazy">
                     </iframe>
                     <br>
-                    <p>Papeleria Y Novedades "La Cultura"</p>
+                    <p>Papelería Y Novedades "La Cultura"</p>
                     <p><i class="material-icons">&#xe55e;</i> Tlahuicole 5 Barrio de Alta Luz Cuapiaxtla Tlaxcala</p>
                     <p><i class="material-icons">&#xe8c5;</i> 2761163782</p>
                     <p><i class="material-icons">&#xe0be;</i> laculturasat@gmail.com</p>
@@ -133,7 +133,7 @@
 
                     <p><i class="material-icons">&#xe88a;</i><a href="../index.html">Inicio</a></p>
                     <p><i class="material-icons">&#xe5c3;</i><a href="../productos/productos.html">Productos</a></p>
-                    <p><i class="material-icons">&#xe7fb;</i><a href="contactanos.html">Contactanos</a></p>
+                    <p><i class="material-icons">&#xe7fb;</i><a href="contactanos.html">Contáctanos</a></p>
 
                 </div>
             </div>
