--- a/front-end/index.html
+++ b/front-end/index.html
@@ -43,10 +43,10 @@
                 <div class="col-md-3">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="productos/productos.html">JAJA</a>
+                            <a class="nav-link" href="productos/productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="login/registro.html">Iniciar Sesion</a>
+                            <a class="nav-link" href="login/registro.html">Iniciar sesión</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="login/registro.html">Registrarse</a>
@@ -104,7 +104,7 @@
                 <img src="http://drive.google.com/uc?export=view&id=17C__WoMCb8PP7C3hC1RARQccGGM6lekn" alt="New York">
                 <div class="carousel-caption">
                     <h3>BARRILITO</h3>
-                    <p>En la Cultura lo mejor de productos Barrilito</p>
+                    <p>En la Cultura lo mejor de productos BARRILITO</p>
                 </div>
             </div>
         </div>
@@ -131,7 +131,7 @@
                     <br>
                     <p><i class="material-icons">&#xe55e;</i> Tlahuicole 5 Barrio de Alta Luz Cuapiaxtla Tlaxcala</p>
                     <p><i class="material-icons">&#xe8c5;</i> 2761163782</p>
-                    <a class="btn btn-success" href="mailto:laculturasat@gmail.com">Mandanos un Email</a>
+                    <a class="btn btn-success" href="mailto:laculturasat@gmail.com">Mándanos un Email</a>
                 </div>
                 <div class="col-sm-3">
                     <h3>Enlaces</h3>
@@ -139,14 +139,14 @@
 
                     <p><i class="material-icons">&#xe88a;</i><a href="index.html">Inicio</a></p>
                     <p><i class="material-icons">&#xe5c3;</i><a href="productos/productos.html">Productos</a></p>
-                    <p><i class="material-icons">&#xe7fb;</i><a href="contactanos/contactanos.html">Contactanos</a></p>
+                    <p><i class="material-icons">&#xe7fb;</i><a href="contactanos/contactanos.html">Contáctanos</a></p>
 
                 </div>
             </div>
             <br>
             <br>
             <div class="derechos text-center">
-                <h5>&copy; 2022 La Cultura. Todos los derechos reservados.</h55>
+                <h5>&copy; 2022 La Cultura. Todos los derechos reservados.</h5>
             </div>
         </div>
 
