--- a/front-end/perfil/perfil.html
+++ b/front-end/perfil/perfil.html
@@ -48,7 +48,7 @@
                             <a class="nav-link" href="../productos/productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../login/registro.html">Iniciar Sesion</a>
+                            <a class="nav-link" href="../login/registro.html">Iniciar sesión</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../login/registro.html">Registrarse</a>
@@ -99,7 +99,7 @@
                                     <td>Hola Juan</td>
                                 </tr>
                                 <tr>
-                                    <td>Telefono:</td>
+                                    <td>Teléfono:</td>
                                     <td>2761163782</td>
                                 </tr>
                                 <tr>
@@ -129,9 +129,9 @@
                                     <th>Numero de pedido</th>
                                     <th>Productos</th>
                                     <th>Total</th>
-                                    <th>Direccion de envio</th>
-                                    <th>Metodo de pago</th>
-                                    <th>Status</th>
+                                    <th>Dirección de envió</th>
+                                    <th>Método de pago</th>
+                                    <th>Estado de envió</th>
                                 </tr>
                             </thead>
                             <tbody id="contenido-3">
@@ -155,7 +155,7 @@
                     <br>
                     <p><i class="material-icons">&#xe55e;</i> Tlahuicole 5 Barrio de Alta Luz Cuapiaxtla Tlaxcala</p>
                     <p><i class="material-icons">&#xe8c5;</i> 2761163782</p>
-                    <a class="btn btn-success" href="mailto:laculturasat@gmail.com">Mandanos un Email</a>
+                    <a class="btn btn-success" href="mailto:laculturasat@gmail.com">Mándanos un Email</a>
                 </div>
                 <div class="col-sm-3">
                     <h3>Enlaces</h3>
@@ -163,7 +163,7 @@
 
                     <p><i class="material-icons">&#xe88a;</i><a href="../index.html">Inicio</a></p>
                     <p><i class="material-icons">&#xe5c3;</i><a href="../productos/productos.html">Productos</a></p>
-                    <p><i class="material-icons">&#xe7fb;</i><a href="../contactanos/contactanos.html">Contactanos</a></p>
+                    <p><i class="material-icons">&#xe7fb;</i><a href="../contactanos/contactanos.html">Contáctanos</a></p>
 
                 </div>
             </div>
