--- a/front-end/procesarpedido/procesarC.html
+++ b/front-end/procesarpedido/procesarC.html
@@ -45,7 +45,7 @@
                             <a class="nav-link" href="../productos/productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../login/registro.html">Iniciar Sesion</a>
+                            <a class="nav-link" href="../login/registro.html">Iniciar sesión    </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../login/registro.html">Registrarse</a>
@@ -83,27 +83,27 @@
 
                     <div class="form-group">
                         <label for="nombre">Nombre y apellidos:</label>
-                        <input type="text" class="form-control" id="nombreD" placeholder="Josue Barrales" name="nombrep" required>
+                        <input type="text" class="form-control" id="nombreD" placeholder="Josué Barrales" name="nombrep" required>
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group">
-                                <label for="pwd">Telefono:</label>
+                                <label for="pwd">Teléfono:</label>
                                 <input type="number" class="form-control" id="telefono" placeholder="2519451111" name="telefono" required>
                             </div>
                         </div>
                         <div class="col-sm-6">
-                            <label for="sel1">Selecciona el metodo de envio:</label>
+                            <label for="sel1">Selecciona el método de envió:</label>
                             <select class="form-control" id="tipoE" name="sellist1">
                             <option>Expres</option>
-                            <option>Rapido</option>
+                            <option>Rápido</option>
                             <option>Ordinario</option>
                         </select>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="nombre">Calle:</label>
-                        <input type="text" class="form-control" id="calle" placeholder="Juarez" name="calle" required>
+                        <input type="text" class="form-control" id="calle" placeholder="Juárez" name="calle" required>
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
@@ -145,13 +145,13 @@
         <div class="pago" id="pago">
             <form>
                 <div class=" cuadro">
-                    <h3>Metodo de pago</h3>
+                    <h3>Método de pago</h3>
                     <div class="form-group">
                         <label for="nombre">Nombre y apellidos:</label>
-                        <input type="text" class="form-control" id="nombrept" placeholder="Josue Barrales" name="nombrept" required>
+                        <input type="text" class="form-control" id="nombrept" placeholder="Josué Barrales" name="nombrept" required>
                     </div>
                     <div class="form-group">
-                        <label for="pwd">Numero de tarjeta:</label>
+                        <label for="pwd">Número de tarjeta:</label>
                         <input type="number" class="form-control" id="tarjeta" placeholder="0000 0000 0000 0000" name="tarjeta" required>
                     </div>
                     <div class="form-group">
@@ -159,7 +159,7 @@
                         <input type="text" class="form-control" id="vencimiento" placeholder="02/26" name="vencimiento" required>
                     </div>
                     <div class="form-group">
-                        <label for="pwd">Codigo de seguridad:</label>
+                        <label for="pwd">Código de seguridad:</label>
                         <input type="number" class="form-control" id="codigos" placeholder="123" name="codigos" required>
                     </div>
                 </div>
@@ -180,13 +180,13 @@
                     <br>
                     <p><i class="material-icons">&#xe55e;</i> Tlahuicole 5 Barrio de Alta Luz Cuapiaxtla Tlaxcala</p>
                     <p><i class="material-icons">&#xe8c5;</i> 2761163782</p>
-                    <a class="btn btn-success" href="mailto:laculturasat@gmail.com">Mandanos un Email</a>
+                    <a class="btn btn-success" href="mailto:laculturasat@gmail.com">Mándanos un Email</a>
                 </div>
                 <div class="col-sm-3">
                     <h3>Enlaces</h3>
                     <p><i class="material-icons">&#xe88a;</i><a href="../index.html">Inicio</a> </p>
                     <p><i class="material-icons">&#xe5c3;</i><a href="../productos/productos.html">Productos</a> </p>
-                    <p><i class="material-icons">&#xe7fb;</i><a href="../contactanos/contactanos.html">  Contactanos</a> </p>
+                    <p><i class="material-icons">&#xe7fb;</i><a href="../contactanos/contactanos.html">  Contáctanos</a> </p>
                 </div>
             </div>
             <br>
