--- a/front-end/productos/productos.html
+++ b/front-end/productos/productos.html
@@ -47,7 +47,7 @@
                             <a class="nav-link" href="../productos/productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../login/registro.html">Iniciar Sesion</a>
+                            <a class="nav-link" href="../login/registro.html">Iniciar sesión</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../login/registro.html">Registrarse</a>
@@ -86,7 +86,7 @@
                 <img src="http://drive.google.com/uc?export=view&id=1SbM6h2Ko0u_65i5J411WhH_zdCcao5Pm" alt="" class="img-fluid">
             </div>
             <div class="col-sm-7 texto">
-                <div class="titulo">Papeleria y Novedades la Cultura</div>
+                <div class="titulo">Papelería y Novedades "La Cultura"</div>
                 <p class="parrafo">Estamos Contigo por Calidad y Precio.</p>
             </div>
         </div>
@@ -98,7 +98,7 @@
             ¡Selecciona una categoria!
         </div>
         <div class="dropdown dropright">
-            <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">Categorias</button>
+            <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">Categorías</button>
             <div class="dropdown-menu">
                 <button type="button" class="dropdown-item" onclick="artes();">Artes</button>
                 <button type="button" class="dropdown-item" onclick="oficina();">Oficina</button>
@@ -120,13 +120,13 @@
                     <br>
                     <p><i class="material-icons">&#xe55e;</i> Tlahuicole 5 Barrio de Alta Luz Cuapiaxtla Tlaxcala</p>
                     <p><i class="material-icons">&#xe8c5;</i> 2761163782</p>
-                    <a class="btn btn-success" href="mailto:laculturasat@gmail.com">Mandanos un Email</a>
+                    <a class="btn btn-success" href="mailto:laculturasat@gmail.com">Mándanos un Email</a>
                 </div>
                 <div class="col-sm-3">
                     <h3>Enlaces</h3>
                     <p><i class="material-icons">&#xe88a;</i><a href="../index.html">Inicio</a> </p>
                     <p><i class="material-icons">&#xe5c3;</i><a href="../productos/productos.html">Productos</a> </p>
-                    <p><i class="material-icons">&#xe7fb;</i><a href="../contactanos/contactanos.html">  Contactanos</a> </p>
+                    <p><i class="material-icons">&#xe7fb;</i><a href="../contactanos/contactanos.html">  Contáctanos</a> </p>
                 </div>
             </div>
             <br>
