--- a/front-end/administrador/informe-stock.html
+++ b/front-end/administrador/informe-stock.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La cultura</title>
+    <title>La Cultura</title>
 
     <!--Hojas de estilo propias-->
     <link rel="stylesheet" href="resources/css/style.css">
@@ -37,10 +37,10 @@
     </div>
     <div class="container">
         <div class="text-left titulo h5">
-            ¡Selecciona una categoria!
+            ¡Selecciona una categoría!
         </div>
         <div class="dropdown dropright">
-            <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">Categorias</button>
+            <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">Categorías</button>
             <div class="dropdown-menu">
                 <button type="button" class="dropdown-item" onclick="artes();">Artes</button>
                 <button type="button" class="dropdown-item" onclick="oficina();">Oficina</button>
@@ -54,9 +54,9 @@
             <table class="table table-dark table-hover">
                 <thead>
                     <tr>
-                        <th>Codigo</th>
+                        <th>Código</th>
                         <th>Nombre</th>
-                        <th>Categoria</th>
+                        <th>Categoría</th>
                         <th>Existencias</th>
                     </tr>
                 </thead>
