--- a/front-end/administrador/producto.html
+++ b/front-end/administrador/producto.html
@@ -37,7 +37,7 @@
             </div>
             <div class="col col-md-8">
                 <div class="display-4">
-                    Agregar producto Nuevo
+                    Agregar producto nuevo
                 </div>
             </div>
         </div>
@@ -45,7 +45,7 @@
 
     <div class="container plantilla row-1">
         <div class="text-left titulo h5">
-            ¡Ingresa los datos a los campos y da click en Guardar Nuevo!
+            ¡Ingresa los datos a los campos y da click en <b>Guardar Nuevo</b>!
         </div>
 
         <div class="row ">
@@ -63,19 +63,19 @@
                     <input type="text" class="form-control" id="nombre" placeholder="Ingrese el nombre" name="nombre" required>
                 </div>
                 <div class="form-group">
-                    <label for="nombre">Codigo:</label>
+                    <label for="nombre">Código:</label>
                     <input type="text" class="form-control" id="codigo" placeholder="Ingrese el codigo" name="codigo" required>
                 </div>
             </div>
 
             <div class="col-12 col-md-6 col">
                 <div class="form-group">
-                    <label for="nombre">Descripcion Corta:</label>
+                    <label for="nombre">Descripción corta:</label>
                     <input type="text" class="form-control" id="descripcion_breve" placeholder="Ingrese la descripcion corta" name="precio" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="nombre">Seleccione la categoria:</label>
+                    <label for="nombre">Selecciona la categoría:</label>
                     <div class="form-check-inline">
                         <label class="form-check-label" for="radio1">
                                 <input type="radio" class="form-check-input" id="categoria1" name="categoria" value="escolar" checked>Artes
@@ -109,7 +109,7 @@
             </div>
             <div class="col-12 col-md-6 col">
                 <div class="form-group">
-                    <label for="comment">Descripcion completa:</label>
+                    <label for="comment">Descripción completa:</label>
                     <textarea class="form-control" rows="7" id="descripcion" placeholder="Ingresa los punto separados por coma(,)"> </textarea>
                 </div>
             </div>
