--- a/front-end/login/registro.html
+++ b/front-end/login/registro.html
@@ -47,7 +47,7 @@
                             <a class="nav-link" href="../productos/productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../login/registro.html">Iniciar Sesion</a>
+                            <a class="nav-link" href="../login/registro.html">Iniciar sesión</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../login/registro.html">Registrarse</a>
@@ -80,7 +80,7 @@
         <div class="cuadro">
             <div class="botones text-center">
                 <button type="button" class="btn btn-warning" onclick="mostrar1();">Registrarse</button>
-                <button type="button" class="btn btn-warning" onclick="mostrar2();">Iniciar sesion</button>
+                <button type="button" class="btn btn-warning" onclick="mostrar2();">Iniciar sesión</button>
             </div>
             <div class="registro" id="registro">
                 <div class="card carta1">
@@ -94,7 +94,7 @@
                             <input type="text" class="form-control" id="apellidos" placeholder="Apellidos" name="apellidos" required>
                         </div>
                         <div class="form-group">
-                            <label for="pwd">Telefono:</label>
+                            <label for="pwd">Teléfono:</label>
                             <input type="number" class="form-control" id="telefono" placeholder="1234567891" name="telefono" required>
                         </div>
                         <div class="form-group">
@@ -106,7 +106,7 @@
                             <input type="text" class="form-control" id="contraseña" placeholder="Contraseña" name="contraseña" required>
                         </div>
                         <div class="form-group">
-                            <label for="ccontraseña">Confirmar Contraseña:</label>
+                            <label for="ccontraseña">Confirmar contraseña:</label>
                             <input type="text" class="form-control" id="contraseñaC" placeholder="Confirmar Contraseña" name="ccontraseña2" required>
                         </div>
                         <button type="button" onclick="guardar();" class="btn btn-primary">Registrarse</button>
@@ -139,14 +139,14 @@
                     <br>
                     <p><i class="material-icons">&#xe55e;</i> Tlahuicole 5 Barrio de Alta Luz Cuapiaxtla Tlaxcala</p>
                     <p><i class="material-icons">&#xe8c5;</i> 2761163782</p>
-                    <a class="btn btn-success" href="mailto:laculturasat@gmail.com">Mandanos un Email</a>
+                    <a class="btn btn-success" href="mailto:laculturasat@gmail.com">Mándanos un Email</a>
                 </div>
                 <div class="col-sm-3">
                     <h3>Enlaces</h3>
                     <br>
                     <p><i class="material-icons">&#xe88a;</i><a href="../index.html">Inicio</a></p>
                     <p><i class="material-icons">&#xe5c3;</i><a href="../productos/productos.html">Productos</a></p>
-                    <p><i class="material-icons">&#xe7fb;</i><a href="../contactanos/contactanos.html">  Contactanos</a></p>
+                    <p><i class="material-icons">&#xe7fb;</i><a href="../contactanos/contactanos.html">  Contáctanos</a></p>
                 </div>
             </div>
             <br>
