--- a/front-end/productos/producto.html
+++ b/front-end/productos/producto.html
@@ -47,7 +47,7 @@
                             <a class="nav-link" href="../productos/productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../login/registro.html">Iniciar Sesion</a>
+                            <a class="nav-link" href="../login/registro.html">Iniciar sesión</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../login/registro.html">Registrarse</a>
@@ -117,13 +117,13 @@
                     <br>
                     <p><i class="material-icons">&#xe55e;</i> Tlahuicole 5 Barrio de Alta Luz Cuapiaxtla Tlaxcala</p>
                     <p><i class="material-icons">&#xe8c5;</i> 2761163782</p>
-                    <a class="btn btn-success" href="mailto:laculturasat@gmail.com">Mandanos un Email</a>
+                    <a class="btn btn-success" href="mailto:laculturasat@gmail.com">Mándanos un Email</a>
                 </div>
                 <div class="col-sm-3">
                     <h3>Enlaces</h3>
                     <p><i class="material-icons">&#xe88a;</i><a href="../index.html">Inicio</a> </p>
                     <p><i class="material-icons">&#xe5c3;</i><a href="productos.html">Productos</a> </p>
-                    <p><i class="material-icons">&#xe7fb;</i><a href="../contactanos/contactanos.html">  Contactanos</a> </p>
+                    <p><i class="material-icons">&#xe7fb;</i><a href="../contactanos/contactanos.html">  Contáctanos</a> </p>
                 </div>
             </div>
             <br>
