Correcion de bugs v quien sabe cuales

--- a/front-end/administrador/index.html
+++ b/front-end/administrador/index.html
@@ -105,6 +105,15 @@
                     </div>
                 </a>
             </div>
+            <div class="col-4 col-md-3 col">
+                <a href="informe-comentarios.html">
+                    <div class="card">
+                        <div class="cuadroInt">
+                            <p>Informe de comentarios</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
     <br>
