--- a/front-end/login/registro.html
+++ b/front-end/login/registro.html
@@ -109,7 +109,7 @@
                             <label for="ccontraseña">Confirmar Contraseña:</label>
                             <input type="password" class="form-control" id="contraseñaC" placeholder="Confirmar Contraseña" name="ccontraseña2" required>
                         </div>
-                        <button type="submit" onclick="guardar();" class="btn btn-primary">Registrarse</button>
+                        <button type="button" onclick="guardar();" class="btn btn-primary">Registrarse</button>
                     </form>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                             <input type="password" class="form-control" id="contraseñaL" placeholder="Contraseña" name="contraseña3" required>
                             <div class="invalid-feedback">Ingresa el datos.</div>
                         </div>
-                        <button type="submit" onclick="entrar()" class="btn btn-primary">Ingresar</button>
+                        <button type="button" onclick="entrar()" class="btn btn-primary">Ingresar</button>
                     </form>
                 </div>
             </div>
