--- a/front-end/procesarpedido/procesar.html
+++ b/front-end/procesarpedido/procesar.html
@@ -82,7 +82,7 @@
                     <h3>Ingresa los datos para enviarte tus productos</h3>
                     <div class="form-group">
                         <label for="nombre">Nombre y apellidos:</label>
-                        <input type="text" class="form-control" id="nombreD" placeholder="Josue Barrales" name="nombrep" required>
+                        <input type="text" class="form-control" id="nombreD" placeholder="Josue Barrales" name="nombreD" required>
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
@@ -111,7 +111,7 @@
                         </div>
                         <div class="col-sm-6">
                             <label for="nombre">Numero interior:</label>
-                            <input type="text" class="form-control" id="numint" placeholder="B" name="numint" required>
+                            <input type="text" class="form-control" id="numint" placeholder="B" name="numint">
                         </div>
                     </div>
                     <div class="row">
