--- a/front-end/procesarpedido/procesarC.html
+++ b/front-end/procesarpedido/procesarC.html
@@ -77,7 +77,7 @@
         <br>
         <h2>Finalizar Pedido</h2>
         <div class="direccionCli" id="direccionCli">
-            <form>
+            <form class="was-validated">
                 <div class="cuadro">
                     <h3>Ingresa los datos para enviarte tus productos</h3>
 
@@ -112,7 +112,7 @@
                         </div>
                         <div class="col-sm-6">
                             <label for="nombre">Numero interior:</label>
-                            <input type="text" class="form-control" id="numint" placeholder="B" name="numint" required>
+                            <input type="text" class="form-control" id="numint" placeholder="B" name="numint" >
                         </div>
                     </div>
                     <div class="row">
