[TlahuicoleSystems] Ultimas modificaciones

--- a/front-end/administrador/index.html
+++ b/front-end/administrador/index.html
@@ -114,6 +114,16 @@
                     </div>
                 </a>
             </div>
+            <!--
+            <div class="col-4 col-md-3 col">
+                <a href="pedidos-abiertos.html">
+                    <div class="card">
+                        <div class="cuadroInt">
+                            <p>Pedidos Abiertos</p>
+                        </div>
+                    </div>
+                </a>
+            </div>-->
         </div>
     </div>
     <br>
