--- a/front-end/perfil/perfil.html
+++ b/front-end/perfil/perfil.html
@@ -85,9 +85,10 @@
                 <button type="button" class="btn btn-success " onclick="mostrar2();">Compras</button>
                 <br><br>
                 <button type="button" class="btn btn-success " onclick="mostrar3();">Pedidos abiertos</button>
+                <br><br>
+                <button type="button" class="btn btn-success " onclick="salir();">Cerrar sesion</button>
             </div>
             <div class="col-md-9 col-12">
-
                 <div id="seccion1" class="text-center">
                     <div class="h1">Pefil</div>
                     <i class="material-icons" style="font-size: 9vw;">person_outline</i>
